# Ars_Fungiglyphica

./: README.md  commit.txt  expand_types.py  fix_types.py  generate_all.py  pyproject.toml
ars_fungiglyphica/: __init__.py  cli.py  elaborator.py  types.py
ars_fungiglyphica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: catalog.json
illustrations/: lattice.txt  morphology_report.txt  summary.txt
lean/: ArsCrossDomain.lean  ArsFungiglyphica.lean
