[project]
name = "ars-fungiglyphica"
version = "0.1.0"
description = "Fungal Morphological Imscription Engine — reads pharmaceutical meaning from fungal morphology"
authors = [{name = "Lando⊗⊙perator"}]
requires-python = ">=3.10"

[project.scripts]
fg = "ars_fungiglyphica.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
